force-app/main/default/objects/Lead/fields/Causa_No_Calificado__c.field-meta.xml
<CustomField>
    <fullName>Causa_No_Calificado__c</fullName>
    <label>Causa No Calificado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Contactado</fullName>
                <label>NO CONTACTADO</label>
            </value>
            <value>
                <fullName>Volumen Insuficiente</fullName>
                <label>VOLUMEN INSUFICIENTE</label>
            </value>
            <value>
                <fullName>Problemas financieros (NOSIS)</fullName>
                <label>PROBLEMAS FINANCIEROS (NOSIS)</label>
            </value>
            <value>
                <fullName>Producto Sustituto</fullName>
                <label>PRODUCTO SUSTITUTO</label>
            </value>
            <value>
                <fullName>Otros</fullName>
                <label>OTROS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>