force-app/main/default/objects/Lead/fields/CorreoAlternativo__c.field-meta.xml
<CustomField>
    <fullName>CorreoAlternativo__c</fullName>
    <label>Correo electrónico alternativo</label>
    <type>Email</type>
</CustomField>