force-app/main/default/objects/Lead/fields/CorreoElectronicoCorporativo__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoCorporativo__c</fullName>
    <label>Correo electrónico corporativo</label>
    <type>Email</type>
</CustomField>