force-app/main/default/objects/Lead/fields/CUIT__c.field-meta.xml
<CustomField>
    <fullName>CUIT__c</fullName>
    <externalId>true</externalId>
    <label>CUIT</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>