force-app/main/default/objects/Lead/fields/Days_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Convert__c</fullName>
    <formula>IF(
  IsConverted,
  ConvertedDate - DATEVALUE(CreatedDate),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Convert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>