force-app/main/default/objects/Lead/fields/Fecha_Conversi_n_MKT__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Conversi_n_MKT__c</fullName>
    <label>Fecha de conversión</label>
    <type>Date</type>
</CustomField>