force-app/main/default/objects/Lead/fields/Fecha_de_MQL__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_MQL__c</fullName>
    <label>Fecha de MQL</label>
    <type>DateTime</type>
</CustomField>