force-app/main/default/objects/Lead/fields/Funci_n_del_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Funci_n_del_Contacto__c</fullName>
    <label>Función del Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Consultor</fullName>
                <label>CONSULTOR</label>
            </value>
            <value>
                <fullName>Contacto alternativo</fullName>
                <label>CONTACTO ALTERNATIVO</label>
            </value>
            <value>
                <fullName>Contacto principal</fullName>
                <label>CONTACTO PRINCIPAL</label>
            </value>
            <value>
                <fullName>Creador de la orden</fullName>
                <label>CREADOR DE LA ORDEN</label>
            </value>
            <value>
                <fullName>Dueño</fullName>
                <label>DUEÑO</label>
            </value>
            <value>
                <fullName>Otro</fullName>
                <label>OTRO</label>
            </value>
            <value>
                <fullName>RESPONSABLE DE LA TOMA DE DECISIONES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>