force-app/main/default/objects/Lead/fields/Horario_de_atenci_n__c.field-meta.xml
<CustomField>
    <fullName>Horario_de_atenci_n__c</fullName>
    <label>Horario de atención</label>
    <length>100</length>
    <type>Text</type>
</CustomField>