force-app/main/default/objects/Lead/fields/ID_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>ID_NetSuite__c</fullName>
    <label>ID NetSuite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>