force-app/main/default/objects/Lead/fields/MQL_Comentario__c.field-meta.xml
<CustomField>
    <fullName>MQL_Comentario__c</fullName>
    <label>Otra Causa No Calificado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>