force-app/main/default/objects/Lead/fields/Nivel_Facturacion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Facturacion_Formula__c</fullName>
    <formula>CASE(
    TEXT(RANGO_DE_FACTURACI_N__c),
    &quot;1&quot;, 0,
    &quot;2&quot;, 0,
    &quot;3&quot;, 0,
    &quot;4&quot;, 1,
    &quot;5&quot;, 2,
    &quot;6&quot;, 3,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nivel Facturacion Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>