force-app/main/default/objects/Lead/fields/Nombre_de_Fantas_a__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Fantas_a__c</fullName>
    <label>Nombre de Fantasía</label>
    <length>200</length>
    <type>Text</type>
</CustomField>