force-app/main/default/objects/Lead/fields/Producto_de_Interes__c.field-meta.xml
<CustomField>
    <fullName>Producto_de_Interes__c</fullName>
    <label>Producto de Interes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CINTA DE EMBALAJE</fullName>
            </value>
            <value>
                <fullName>CINTA DE PAPEL</fullName>
            </value>
            <value>
                <fullName>CINTA IMPRESA</fullName>
            </value>
            <value>
                <fullName>PROTECCION VCI</fullName>
            </value>
            <value>
                <fullName>EMBALAJE GENERAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>