force-app/main/default/objects/Lead/fields/Puesto_de_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Puesto_de_Trabajo__c</fullName>
    <label>Puesto de Trabajo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Puesto_de_Trabajo</valueSetName>
    </valueSet>
</CustomField>