force-app/main/default/objects/Lead/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <label>Rubro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rubro</valueSetName>
    </valueSet>
</CustomField>