force-app/main/default/objects/Lead/fields/Rubro_Formula__c.field-meta.xml
<CustomField>
    <fullName>Rubro_Formula__c</fullName>
    <formula>CASE(TEXT(Rubro__c),
					&quot;71&quot;, 0,
					&quot;43&quot;, 0,
					&quot;82&quot;, 0,
					1
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rubro Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>