force-app/main/default/objects/Lead/fields/Score_Formula__c.field-meta.xml
<CustomField>
    <fullName>Score_Formula__c</fullName>
    <formula>(($Setup.Factor_Importancia__c.Score_Nosis__c / 4) * Score_Nosis_Formula__c) +
(($Setup.Factor_Importancia__c.Nivel_Facturacion_Nosis__c / 3) * Nivel_Facturacion_Formula__c) +
(($Setup.Factor_Importancia__c.Rubro__c / 1) * Rubro_Formula__c) +
(($Setup.Factor_Importancia__c.Ubicacion__c / 4) * Ubicacion_Formula__c) +
(($Setup.Factor_Importancia__c.Empleados__c / 4) * Empleados_Formula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>