force-app/main/default/objects/Lead/fields/Score_Nosis__c.field-meta.xml
<CustomField>
    <fullName>Score_Nosis__c</fullName>
    <label>Score</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>