force-app/main/default/objects/Lead/fields/TelefonoAlternativo__c.field-meta.xml
<CustomField>
    <fullName>TelefonoAlternativo__c</fullName>
    <label>Teléfono Alternativo</label>
    <type>Phone</type>
</CustomField>