force-app/main/default/objects/Lead/validationRules/Cantidad_de_Empleados.validationRule-meta.xml
<ValidationRule>
    <fullName>Cantidad_de_Empleados</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
ISBLANK(   NumberOfEmployees   )
)</errorConditionFormula>
    <errorDisplayField>NumberOfEmployees</errorDisplayField>
    <errorMessage>Falta el número de empleados</errorMessage>
</ValidationRule>