force-app/main/default/objects/Lead/validationRules/CUIT_incorrecto.validationRule-meta.xml
<ValidationRule>
    <fullName>CUIT_incorrecto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT (TEXT( Status ) = &quot;Prospecto Lead&quot;),
NOT(REGEX(TEXT( CUIT__c ), &apos;\\d{11}&apos;)))</errorConditionFormula>
    <errorDisplayField>CUIT__c</errorDisplayField>
    <errorMessage>El CUIT debe tener 11 digitos</errorMessage>
</ValidationRule>