force-app/main/default/objects/Lead/validationRules/Datos_de_la_empresa.validationRule-meta.xml
<ValidationRule>
    <fullName>Datos_de_la_empresa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
OR (ISBLANK(  Street  ),
ISBLANK(  City  ),
ISBLANK(  Country  ),
ISBLANK(  State  )
))</errorConditionFormula>
    <errorDisplayField>Street</errorDisplayField>
    <errorMessage>Falta completar la dirección de la empresa</errorMessage>
</ValidationRule>