force-app/main/default/objects/Lead/validationRules/Debe_cambiar_el_Apellido.validationRule-meta.xml
<ValidationRule>
    <fullName>Debe_cambiar_el_Apellido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
LastName=&quot;N/A&quot;
)</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>El apellido no debe ser N/A</errorMessage>
</ValidationRule>