force-app/main/default/objects/Lead/validationRules/Falta_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Falta_email</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
ISBLANK(    Email    )
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Falta completar email</errorMessage>
</ValidationRule>