force-app/main/default/objects/Lead/validationRules/Falta_Nombre_de_fantasia.validationRule-meta.xml
<ValidationRule>
    <fullName>Falta_Nombre_de_fantasia</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
OR (ISBLANK(  Nombre_de_Fantas_a__c )
))</errorConditionFormula>
    <errorDisplayField>Nombre_de_Fantas_a__c</errorDisplayField>
    <errorMessage>Falta completar el Nombre de Fantasía de la empresa</errorMessage>
</ValidationRule>