force-app/main/default/objects/Lead/validationRules/Falta_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Falta_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
OR (ISBLANK( Phone )
))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Falta completar el teléfono de la empresa</errorMessage>
</ValidationRule>