force-app/main/default/objects/Lead/validationRules/No_Calificado.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Calificado</fullName>
    <active>true</active>
    <errorConditionFormula>and(TEXT( Status ) = &quot;No Cualificado&quot; ,
ISBLANK(  MQL_Comentario__c  ))</errorConditionFormula>
    <errorDisplayField>MQL_Comentario__c</errorDisplayField>
    <errorMessage>Debe detallar la otra causa de No Cualificado</errorMessage>
</ValidationRule>