force-app/main/default/objects/Lead/validationRules/No_Cualificado.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Cualificado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT( Status ) = &quot;No Cualificado&quot;,
ISBLANK(TEXT( Causa_No_Calificado__c ))
)</errorConditionFormula>
    <errorMessage>Falta la causa de no cualificado</errorMessage>
</ValidationRule>