force-app/main/default/objects/Lead/validationRules/Nombre_del_contacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombre_del_contacto</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
OR (ISBLANK( FirstName )
))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Falta completar Puesto de trabajo</errorMessage>
</ValidationRule>