force-app/main/default/objects/Lead/validationRules/Puesto_de_Trabajo.validationRule-meta.xml
<ValidationRule>
    <fullName>Puesto_de_Trabajo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
OR (
ISBLANK(  TEXT(  Puesto_de_Trabajo__c) )
))</errorConditionFormula>
    <errorDisplayField>Puesto_de_Trabajo__c</errorDisplayField>
    <errorMessage>Falta completar Puesto de trabajo</errorMessage>
</ValidationRule>