force-app/main/default/objects/Lead/validationRules/Rubro.validationRule-meta.xml
<ValidationRule>
    <fullName>Rubro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
ISBLANK( text(  Rubro__c   )
))</errorConditionFormula>
    <errorDisplayField>Rubro__c</errorDisplayField>
    <errorMessage>Falta completar Rubro</errorMessage>
</ValidationRule>