force-app/main/default/objects/Lead/validationRules/Score_de_Nosis.validationRule-meta.xml
<ValidationRule>
    <fullName>Score_de_Nosis</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
ISBLANK(   Score_Nosis__c   )
)</errorConditionFormula>
    <errorDisplayField>Score_Nosis__c</errorDisplayField>
    <errorMessage>Falta el score de Nosis</errorMessage>
</ValidationRule>