force-app/main/default/objects/Lead/validationRules/Tipo_de_Contribuyente.validationRule-meta.xml
<ValidationRule>
    <fullName>Tipo_de_Contribuyente</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(TEXT( Status ) = &quot;Prospecto MQL&quot;,TEXT( Status ) = &quot;Atención (Calificado - SQL)&quot;),
ISBLANK( text(  Tipo_de_Contribuyente__c   )
))</errorConditionFormula>
    <errorDisplayField>Tipo_de_Contribuyente__c</errorDisplayField>
    <errorMessage>Falta el tipo de contribuyente</errorMessage>
</ValidationRule>