force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.URL</columns>
    <columns>Horario_de_atenci_n__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>TelefonoAlternativo__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CorreoElectronicoCorporativo__c</columns>
    <columns>LEAD.ZIP</columns>
    <columns>Rubro__c</columns>
    <columns>RANGO_DE_FACTURACI_N__c</columns>
    <columns>LEAD.EMPLOYEES</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>contains</operation>
        <value>TUCUMAN</value>
    </filters>
    <filters>
        <field>RANGO_DE_FACTURACI_N__c</field>
        <operation>equals</operation>
        <value>4,5,6</value>
    </filters>
    <filters>
        <field>LEAD.EMPLOYEES</field>
        <operation>greaterOrEqual</operation>
        <value>40</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Prospecto Lead,Prospecto MQL</value>
    </filters>
    <filters>
        <field>Rubro__c</field>
        <operation>contains</operation>
        <value>ALIMENTICIA,AUTOMOTRIZ,LÁCTEOS,FRIGORÍFICO,LÍNEA BLANCA,PAPELERA</value>
    </filters>
    <label>Todos los prospectos abiertos</label>
</ListView>