force-app/main/default/objects/Lead/listViews/Copia_de_Todos_los_prospectos_abiertos.listView-meta.xml
<ListView>
    <fullName>Copia_de_Todos_los_prospectos_abiertos</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.URL</columns>
    <columns>Horario_de_atenci_n__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>TelefonoAlternativo__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CorreoElectronicoCorporativo__c</columns>
    <columns>LEAD.ZIP</columns>
    <columns>Rubro__c</columns>
    <columns>RANGO_DE_FACTURACI_N__c</columns>
    <columns>LEAD.EMPLOYEES</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Prospecto Lead,Prospecto MQL</value>
    </filters>
    <filters>
        <field>RANGO_DE_FACTURACI_N__c</field>
        <operation>equals</operation>
        <value>3,4,5,6</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>contains</operation>
        <value>CORDOBA,SANTA FE</value>
    </filters>
    <filters>
        <field>Rubro__c</field>
        <operation>equals</operation>
        <value>72,20,78,40,1,83,12,85,86,51,10,90,87</value>
    </filters>
    <label>EXPOSICIÓN BIMM</label>
</ListView>